# CloudRedirect

./: CMakeLists.txt  README.md  Version.props
cli-dotnet/: SteamDetector.cs
cli-rust/: .gitignore  Cargo.toml
cli-rust/src/: crypto.rs  embedded.rs  file_util.rs  main.rs  patcher.rs  pe.rs  signatures.rs  steam_detector.rs
flatpak/: org.cloudredirect.CloudRedirect.metainfo.xml  org.cloudredirect.CloudRedirect.yml
src/common/: autocloud_bootstrap.cpp  autocloud_scan.cpp  autocloud_scan.h  cli.cpp  cr_api.h  rpc_handlers.cpp  stats_handlers.cpp  stats_store.cpp  stats_store.h
src/platform/linux/: cloud_hooks.cpp  cloud_intercept.cpp  init.cpp  log.cpp  xdg.h
src/platform/win/: cloud_intercept.cpp  cloud_intercept.h  cr_api.cpp
ui/: CloudRedirect.csproj  MainWindow.xaml  MainWindow.xaml.cs
ui-linux/src/: backend.cpp  deployer.cpp  utils.h
ui/Pages/: Cloud760Page.xaml  NewsPage.xaml  SettingsPage.xaml.cs
ui/Resources/: Strings.es.resx  Strings.pt-BR.resx  Strings.resx
ui/Services/: SteamDetector.cs
