[package]
name = "cloudredirect-cli"
version = "2.2.1"
edition = "2021"
description = "CloudRedirect CLI (STFixer) — Rust port"

[[bin]]
name = "CloudRedirectCLI"
path = "src/main.rs"

[dependencies]
# Registry access for Steam path detection
winreg = "0.52"
# AES-256 for SteamTools payload crypto
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
# Hashing (fingerprint / payload validation)
sha2 = "0.10"
md-5 = "0.10"
# zlib inflate for payload validation
flate2 = "1"
# Minimal HTTP for core-DLL download (only stdlib + a tiny client)
ureq = { version = "2", default-features = false, features = ["tls"] }

[profile.release]
opt-level = "z"      # optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true
